fixed the issue of the scroll view of list items not visible all the way to the bottom. this issue all made the scrollbar seem cut when I scrolled to the bottom. the fix was to have the listview have a flex-flow:'column'. this allowed the div with the scrollview to have occupy all the remaining space, allowing it to be visible at the bottom. previously, setting height to 100% had not worked

--- a/src/css/Details.css
+++ b/src/css/Details.css
@@ -1,7 +1,7 @@
 .Details {
     display: flex;
     flex-direction: column;
-    padding: 0;
+    padding-top: 5px;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
