--- a/src/css/ListView.css
+++ b/src/css/ListView.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 100%;
     padding: 0px;
+    display: flex;
+    flex-flow: column;
 }
 
 .addTaskDiv {
